# product_market_tz

./: .env.exemple  Dockerfile  README.md  docker-compose.yaml  file_tz.py  pyproject.toml
app/: constants.py  settings.py  urls.py
marketApp/: admin.py  models.py  paginators.py  serializers.py  tests.py  urls.py  views.py
marketApp/migrations/: 0001_initial.py  0002_alter_category_options.py  0003_category_slug_alter_category_name.py  0004_alter_category_options_subcategory.py  0005_alter_category_photo.py  0006_alter_category_photo_alter_category_slug_and_more.py  0007_cartview.py  0008_alter_product_photo.py  0009_remove_product_photo_product_image_large_and_more.py
usersApp/: admin.py  models.py  serializers.py  tests.py  urls.py
usersApp/management/commands/: csu.py
usersApp/migrations/: 0001_initial.py  0002_alter_user_age.py  0003_alter_user_options.py
usersApp/views/: users.py
